Fix container overflow and centre content

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,19 +5,28 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	height: 100vh;	
+	height: 100%;	
 }
 
-div#content {
+div#container {
+	display: flex;
 	height: 100vh;
-	display:flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
+
 nav {
-	display: flex;
+	flex-shrink: 0;
 	justify-content: center;
+}
+
+div#content {
+	flex-grow: 1;
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 h1, p {
@@ -26,10 +35,9 @@ h1, p {
 }
 
 h1 {
-	font-size: 2.5rem;  
+	font-size: 2rem;  
 }
 
 p {
 	font-size: 1.5rem;
 }
-
